fixed a z-index bug

--- a/app/assets/stylesheets/media-queries.scss
+++ b/app/assets/stylesheets/media-queries.scss
@@ -152,6 +152,7 @@
         right: 0;
         width: 100%;
         height: auto;
+        z-index: 1000;
       }
 
       &:hover {
